<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SimplyWords</string>
    <string name="simplify_this">Simplify this</string>
    <string name="simplify_text">Simplify text</string>
    <string name="simplify_image">Simplify a photo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="or_lowercased">or</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="profile">Profile</string>
    <string name="welcome_to">Welcome to</string>
    <string name="introduction">SimplyWords can help make any text you see easier to understand. If you don\'t understand something, just select it and tap the "Simplify this" button that appears. You can even simplify images!</string>
    <string name="welcomeStatement">Welcome!</string>
    <string name="featuresLabel">Features to Explore</string>
    <string name="recentActivityLabel">Recent Activity</string>
    <string name="summarised">Summarised</string>
    <string name="loading" tools:ignore="TypographyEllipsis">Loading...</string>
    <string name="simplifying_text" tools:ignore="TypographyEllipsis">Simplifying your text...</string>
    <string name="close">Close</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="coming_soon_description">More features coming soon!</string>
    <string name="content_description_home">Homepage of SimplyWords</string>
    <string name="content_description_settings">Manage the settings of SimplyWords</string>
    <string name="error_enter_text">Please enter some text to simplify.</string>
    <string name="featuresLabel">Features to Explore</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="loading" tools:ignore="TypographyEllipsis">Loading...</string>
    <string name="lorem_ipsum">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
    volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
    dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
    litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
    diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
    ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
    Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
    egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
    neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
    fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
    molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
    bibendum, vel congue leo egestas.
</string>
    <string name="next">Next</string>
    <string name="notification_message">SimplyWords is currently running in the background.</string>
    <string name="notification_title">SimplyWords is running</string>
    <string name="or_lowercased">or</string>
    <string name="original_text">Original text</string>
    <string name="permission_overlay_message">We need a special permission to display over other apps. We\'ll use this to display the simplified text over the original text. If you do not grant this permission, you might not be able to make full use of this app.</string>
    <string name="permission_camera_message">We need access to your camera for us to scan and simplify the words. </string>
    <string name="permission_title">Permission required</string>
    <string name="previous">Previous</string>
    <string name="profile">Profile</string>
    <string name="recents">Recents</string>
    <string name="recentActivityLabel">Recent Activity</string>
    <string name="settings">Settings</string>
    <string name="settings_description">Change various settings for the app here.</string>
    <string name="simplify_camera">Take a picture</string>
    <string name="simplify_description">View your past queries and configure our Simplifier tool here.</string>
    <string name="simplify_image">Select from gallery</string>
    <string name="simplified_text">Simplified text</string>
    <string name="simplify_input_hint" tools:ignore="TypographyEllipsis">Text to simplify</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="coming_soon_description">More features coming soon!</string>
    <string name="error_enter_text">Please enter some text to simplify.</string>
    <string name="customization">Customization</string>
    <string name="change_behavior">Change behavior</string>
    <string name="change_behavior_description">Not happy with your summaries? Change the behavior of the summarizer here.</string>
    <string name="change_style">Change style</string>
    <string name="change_style_description">Don\'t like the way your summaries look? Change the styling of your summaries here.</string>
    <string name="about">About SimplyWords (for the curious!)</string>
    <string name="about_team">About the team</string>
    <string name="about_team_description">Learn more about the team behind SimplyWords.</string>
    <string name="credits_attributions">Credits and attributions</string>
    <string name="version">Version</string>
    <string name="version_number">0.0.0</string>
    <string name="adjust_simplification_title">How simple do you want your text?</string>
    <string name="adjust_simplification_description">Want even simpler? Press and hold the circle below and drag to the left. If you want to make it more detailed, drag to the right.</string>
    <string name="known_topics_title">What topics do you know?</string>
    <string name="known_topics_description">If you understand the terms and concepts used in these topics, we\'ll try to avoid simplifying them.</string>
    <string name="very_simple">Very simple</string>
    <string name="simple">Simple</string>
    <string name="detailed">Detailed</string>
    <string name="example">Example</string>

    <string-array name="topics">
        <item name="sciences">Sciences</item>
        <item name="mathematics">Mathematics</item>
        <item name="engineering">Engineering</item>
        <item name="technology">Technology</item>
        <item name="arts">Arts</item>
        <item name="humanities">Humanities</item>
        <item name="social_sciences">Social Sciences</item>
        <item name="business">Business</item>
        <item name="medicine">Medicine</item>
        <item name="law">Law</item>
        <item name="education">Education</item>
    </string-array>

    <string-array name="time_filter_options">
        <item>This week</item>
        <item>Last 3 Weeks</item>
        <item>Last 3 Months</item>
        <item>All time</item>
    </string-array>

    <string name="very_simple_example">
        - Cybersecurity is about protecting against cyberattacks.\n
        - Cybersecurity tries to protect your systems, devices, and data from different types of attacks, like viruses and ransomware.\n
        - It is important to have cybersecurity measures in place to keep your information safe.
    </string>
    <string name="simple_example">
        Cybersecurity means using technology, methods, and rules to stop cyberattacks or reduce their
        effects. It helps keep people and organizations safe by defending their systems, programs,
        computers, important information, and money from different types of threats such as viruses
        and ransomware attacks.
    </string>
    <string name="detailed_example">
        Cybersecurity is about protecting our devices and information from digital attacks. This includes
        things like computer viruses or ransomware, which can harm our systems or steal our data. Its
        purpose is to keep us safe from these online threats.
    </string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.
    </string>
</resources>