<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        >

        <LinearLayout
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:minHeight="?attr/actionBarSize"
            android:paddingTop="45dp"
            android:paddingBottom="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/topAppBar_logoSecondary"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/simplywords_logo" />
<!--            <Button-->
<!--                android:id="@+id/debugButton"-->
<!--                android:layout_width="50dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:background="@drawable/baseline_android_24">-->

<!--            </Button>-->
<!--            <Button-->
<!--                android:id="@+id/debugButton1"-->
<!--                android:layout_width="50dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:background="@drawable/baseline_android_24">-->

<!--            </Button>-->
<!--            <Button-->
<!--                android:id="@+id/debugButton2"-->
<!--                android:layout_width="50dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:background="@drawable/baseline_android_24">-->

<!--            </Button>-->
        </LinearLayout>

        <TextView

            android:id="@+id/homePage_WelcomeStatement"

            android:text="@string/welcomeStatement"
            android:textSize="@dimen/colossal_text"

            android:textFontWeight="500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topAppBar" />

        <TextView
            android:id="@+id/homePage_TextView_Recents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:textSize="@dimen/medium_text"
            android:textFontWeight="500"
            android:textStyle="italic"
            android:text="@string/featuresLabel"
            android:textColor="?attr/colorPrimary"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/homePage_WelcomeStatement" />
        <HorizontalScrollView
            android:id="@+id/homePage_FeaturesScroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homePage_TextView_Recents">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="300dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/homePage_TextSimplifier_MaterialCardView"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="2dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/homePage_TextView_Recents">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <!-- Media -->
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/rounded_corners_bottom"
                            android:contentDescription="@string/lorem_ipsum"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/simplify_image" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <!-- Title, secondary and supporting text -->
                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/big_text"
                                android:textFontWeight="500"
                                android:text="@string/app_name" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"

                                android:textSize="@dimen/medium_text"
                                android:textFontWeight="500"

                                android:text="@string/simplify_description"
                                android:textAppearance="?attr/textAppearanceBodyMedium" />
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/homePage_Settings_MaterialCardView"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="?attr/colorTertiaryContainer"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <!-- Media -->
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/rounded_corners_bottom"
                            android:contentDescription="@string/lorem_ipsum"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/work_in_progress_image" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <!-- Title, secondary and supporting text -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:textSize="@dimen/big_text"
                                android:textFontWeight="500"

                                android:text="@string/coming_soon"
                                android:textColor="?attr/colorOnTertiaryContainer" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="60dp"
                                android:layout_marginTop="8dp"

                                android:textSize="@dimen/medium_text"
                                android:textFontWeight="500"

                                android:text="@string/coming_soon_description"
                                android:textColor="?android:attr/textColorSecondary" />
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </HorizontalScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>